tests/ui/span/issue-27522.stderr
error[E0307]: invalid `self` parameter type: `&SomeType`
  --> $DIR/issue-27522.rs:6:22
   |
LL |     fn handler(self: &SomeType);
   |                      ^^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing Receiver
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver` such as `self: Box<Self>`, `self: Rc<Self>`, or `self: Arc<Self>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0307`.
